styles/home.css
/* Styles the body to take up the whole viewheight and viewwidth */
body{
    margin: 0;
    height: 100vh;
    width: 100vw;
}

/* adjustable content pane to hold the page contents */
.content-pane{
    justify-content: space-between;
    align-items: center;
    height: 100%;
    flex-wrap: nowrap;
}

/* Header just holds the title and tabs */
.header{
    background-color: #186F65;
    height: 10%;
    width: 100%;
    padding: 12px;
    flex: 0;
    justify-content: flex-start;
    align-items: center;
    border-bottom: 3px #FCE09B solid;
    flex-wrap: nowrap;
}

.left-side-header{
    flex: 1;
    justify-content: flex-start;
}

/* additional styling for the Home, Feed, and About tabs */
.tab-margins{
    margin-left: 20px;
}

.tab-margins a{
    color: #FCE09B;
    text-wrap: nowrap;
    text-decoration: none;
    transition: 0.2s ease-in;
    padding: 16px;
}

.tab-margins a:hover{
    background-color: #B5CB99;
    text-wrap: nowrap;
    color: white;
}

/* tabs styling */
.tabs{
    flex: 1;
    text-decoration: none;
    max-width: fit-content;
    gap: .5rem;
}

/* additional styling for the profile picture icon */
.profile-icon{
    background-color: lightgray;
    padding: 8px;
    align-items: center;
    height: 40px;
    width: 40px;
    max-height: 40px;
    max-width: 40px;
}

/* container for the account popup and clickable icon */
.account-popup-container{
    position: relative;
}

/* icon is clickable to go to account page */
#account-clickable-icon{
    color: black;
    padding: 0;
    cursor: pointer;
    z-index: 1;
}

/* The menu that pops up when the account profile icon is clicked */
.account-popup {
    background-color: #e3e3e3;
    position: absolute;
    top: calc(100% + .75rem);
    right: 0; /* Adjust as needed */
    border: 'none';
    border-radius: 8px;
    padding: 10px;
    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .3);
    pointer-events: none;
    z-index: 2; /* Pops up below the profile icon */
    opacity: 0; /* Set initial opacity to 0 to make it invisible */
    transform: translateY(-10px); /* move the popup up and down */
    transition: opacity 150ms ease-in-out, transform 150ms ease-in-out; /* Add a transition for opacity and transform */
}

/* this will make the pop up menu fade in */
.account-popup.open {
    display: block;
    opacity: 1;
    transform: translateY(0); /* move the popup up and down */
    pointer-events: auto;
}

/* additional styling for the unordered list */
.account-popup ul {
    list-style: none;
    padding: 0;
    margin: 0;
}

/* additional styling for the list items */
.account-popup li {
    margin: 5px 0;
    width: fit-content;
    max-width: fit-content;
}

/* style of links in popup */
.account-popup li a {
    color: black;
    text-wrap: nowrap;
    border: none;
    text-decoration: none;
}

/* when account-popup is hovered over, it changes colors */
.account-popup li a:hover {
    color: white;
}

.img-on-card{
    max-width: 100%;
    max-height: 180px;
    min-height: 20%;
    flex: 1

}


/* Hide the modal by default */
.modal {
    display: none;
    position: fixed;
    z-index: 1;
    padding: 50px;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0,0,0,0.9);
    overflow: auto;
}

/* Style the close button */
.close {
    position: absolute;
    top: 10px;
    right: 25px;
    color: #f1f1f1;
    font-size: 35px;
    font-weight: bold;
    cursor: pointer;
}

/* Enlarged image */
.modal-content {
    display: block;
    max-width: 100%;
    max-height: 100%;
    margin: 0 auto;
}

.modal img {
    display: block;
    margin: 0 auto;
    max-width: 100%;
    height: auto;
}


/* the container will move relative to the screen */
.upload-btn-container{
    position: relative;
    background-color: transparent;
    border: none;
}

/* makes a sticky button that will stay on the same part of the page throughout scrolling */
#sticky-upload-btn{
    position: fixed;
    height: 2em;
    width: 2em;
    bottom: 20px;
    right: 20px;  
    padding: 0;
    background-color: #007BFF;
    color: #fff;
    border: none;
    cursor: pointer;
    z-index: 1;
}

/* styling for the popup menu */
.upload-popup-btn {
    position: fixed;
    bottom: calc(10% + .25rem);
    right: 1%; /* Adjust as needed */
    background-color: #fff;
    border: 'none';
    border-radius: 5px;
    padding: 10px;
    z-index: 2; /* Pops up above the button */
    opacity: 0; /* Set initial opacity to 0 to make it invisible */
    /* Add a transition for opacity and transform */
    transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
    transform: translateY(10px); /* move the popup up and down */
    pointer-events: none;
}

/* this will make the pop up menu fade in */
.upload-popup-btn.visible {
    display: block;
    opacity: 1;
    transform: translateY(0); /* move the popup up and down */
    pointer-events: auto;
}

/* additional styling for the unordered list */
.upload-popup-btn{
    list-style: none;
    padding: 0;
    margin: 0;
}

/* additional styling for the list items */
.upload-popup-btn li {
    margin: 5px 0;
}

/* additional styling for the buttons in the list so they are uniform*/
.upload-popup-btn button{
    background-color: #007BFF;
    color: #fff;
    border: none;
    cursor: pointer;
    border-radius: 24px;
    font-size: 18px;
    width: 100%;
}

/* ensures that the button does not stay focused after a click */
#sticky-upload-btn:focus {
    outline: none;
    box-shadow: none;
}

/* puts the popup menu above the button */
#sticky-upload-btn:focus + .upload-popup-btn {
    display: block;
}

/* Card grid styling */
.card-grid {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(300px,1fr)); /* 3 columns in a row */
    gap: 10px; /* Adjust the gap between grid items */
    padding: 10px;
}

/* Card styling */
.card {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    border: 1px solid #ccc;
    max-width: 300px; /* Adjust as needed */
}

/* Image within the card */
.card img {
    width: 100%; /* Scale images to fill their parent */
    height: 100%;
    object-fit: cover;
    cursor: pointer;
}

/* Hidden text within the card body */
.card-text {
    display: none;
}

/* Show text when the card is active */
.card.active .card-text {
    display: block;
}

body {
    background: url('forest.jpg') no-repeat center center fixed; 
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}
.translucent-form-overlay {
    position: relative;
    background-color: rgba(0,0,0,0.6);
    width: 100%;
    height: 100vh;
    padding-top: 30px;
}

